// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic functionality: a formatted table 1`] = `
VFile {
  "contents": "| **A** | **B** | **C** |
| ----: | :---- | ----- |
|     a | b     | c     |
|     x | y     | z     |
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Basic functionality: alternating keeps information of different codification 1`] = `
VFile {
  "contents": "*   a
*   b
    *   c

    <!---->

    *   d
        *   e

        <!---->

        *   f
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Basic functionality: dont break obsidian links 1`] = `
VFile {
  "contents": "[[respect this]]
[[and this]][[also this]]
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Basic functionality: enumerate lists 1`] = `
VFile {
  "contents": "1.  foo

a. aaa
b. bbb
c. ccc

1.  bar
2.  baz
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Basic functionality: enumerate lists 2`] = `
VFile {
  "contents": "1.  foo
    1.  aaa
    2.  bbb
    3.  ccc
2.  bar
3.  baz
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Basic functionality: lists use * bullets 1`] = `
VFile {
  "contents": "*   a
*   b
    *   c
    *   d
        *   e
        *   f
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Basic functionality: lists use - bullets 1`] = `
VFile {
  "contents": "-   a
-   b
    -   c
    -   d
        -   e
        -   f
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Can generate metadata table 1`] = `
VFile {
  "contents": "# What the Semantic Web ignores

The Web is not only about facts,
It's about humans communicating all sorts of things.
In their own language, with their own model of the world.

perhaps 1% ? of the humans use it for facts?
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Embed image 1`] = `
VFile {
  "contents": "[![](https://cyberculturesblog.files.wordpress.com/2019/01/Memex.jpg)](https://cyberculturesblog.files.wordpress.com/2019/01/Memex.jpg)
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`Embed youtube TODO 1`] = `
VFile {
  "contents": "<https://www.youtube.com/watch?v=B6rKUf9DWRI>
",
  "cwd": "/home/cvasquez/obsidian/workspace/.obsidian/plugins/markdown-prettifier",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
